--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.6.5",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-awesome-slider": "^4.1.0",
